 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

Nov 23 2001, Shigio Yamaguchi  <shigio@tamacom.com>

	* gtags: format char for strftime() changed (%e -> %d).
	* gtags: the path of gctags changed from 'gctags' to '$bindir/gctags'.
	* htags: use gtags --date and gtags --pwd instead of date and pwd.
	  Above changes are for Windows 32 environment.
	* rename file: pathop.[ch] -> gpathop.[ch].
	* rename functions: pathxxx -> gpath_xxx, gtagsxxx -> gtags_xxx.
	* rename functions: ffindxxx -> find_xxx, gfindxxx -> gfind_xxx.
	* libglibc/snprintf.c added.
	* move gfind_xxx from libutil/find.c to libutil/gpathop.c.

July 31 2001, Shigio Yamaguchi  <shigio@tamacom.com>

	* VERSION: removed.
	* compat.h: moved to libdb/.
	* machine/: removed.
	* htags: WWW link in hypertext was modified.
	* gtags.c, global.c: rewrite code for putenv(3) using malloc(3).

July 12 2001, Shigio Yamaguchi  <shigio@tamacom.com>

	* config variable HAVE_SNPRINTF and AC_FUNC_ALLOCA added.
	* stop using MAXENVLEN because it brings buffer overflow.
	* htags.pl: the value of id changed from src directory
	  to HTML directory.
	* libutil/conf.c: error check added.
	* libutil/gtagsop.c: replace notnamechar() with isregex().
	* put '#assert' into reserved word.
	* reconf.sh: command for generating configure added.
	* Copyright notice added for short files that are not important
	  enough to worry about copylefting.
	* libdb/db.h: typdefs pgno_t, indx_t and recno_t changed into macros.
	* gctags/{C.c,Cpp.c}: memory violation fixed.
	* libutil/getopt* and libregex/* moved to new libglibc/ directory.

September 26 2000, Shigio Yamaguchi  <shigio@tamacom.com>

	* htags.pl: use generated path of perl for global.cgi.