@@ -16,12 +16,12 @@ noinst_LIBRARIES = libgloutil.a
 noinst_HEADERS = \
 conf.h dbop.h defined.h die.h find.h getdbpath.h global.h gparam.h \
 gtagsop.h locatestring.h makepath.h path.h gpathop.h strbuf.h \
-strmake.h tab.h test.h token.h usable.h version.h
+strmake.h tab.h test.h token.h usable.h version.h is_unixy.h
 
 libgloutil_a_SOURCES = \
 conf.c dbop.c defined.c die.c find.c getdbpath.c gtagsop.c locatestring.c \
 makepath.c path.c gpathop.c strbuf.c strmake.c tab.c test.c \
-token.c usable.c version.c
+token.c usable.c version.c is_unixy.c
 
 AM_CFLAGS = -DBINDIR='"$(bindir)"'
 
